/**
 * This file holds the protobuf definitions for messages and enums
 * used in the Weave GitOps Terraform API.
 */
syntax = "proto3";

package terraform.v1;

// protolint:disable:next MAX_LINE_LENGTH
option go_package = "github.com/weaveworks/weave-gitops-enterprise/terraform/api";

message SourceRef {
    string apiVersion = 1;
    string kind       = 2;
    string name       = 3;
    string namespace  = 4;
}

message Interval {
    int64 hours = 1;
    int64 minutes = 2;
    int64 seconds = 3;
}

message ResourceRef {
    string name       = 1;
    string type       = 2;
    string identifier = 3;
}

message NamespacedObjectReference {
    string name = 1;
    string namespace = 2;
}

message ObjectRef {
    string clusterName = 1;
    string name        = 2;
    string namespace   = 3;
    string kind        = 4;
}

message TerraformObject {
    string name        = 1;
    string namespace   = 2;
    string clusterName = 3;
    string type        = 4;
    string uid         = 5;

    SourceRef sourceRef            = 6;

    string    appliedRevision      = 7;
    string    path                 = 8;
    Interval  interval             = 9;
    string    lastUpdatedAt        = 10;
    bool      driftDetectionResult = 11;
    
    repeated ResourceRef               inventory   = 12;
    repeated Condition                 conditions  = 13;
    map<string, string>                labels      = 14;
    map<string, string>                annotations = 15;
    repeated NamespacedObjectReference dependsOn   = 16;

    bool suspended = 17;
}

message Pagination {
    int32  pageSize  = 1;
    string pageToken = 2;
}

message TerraformListError {
    string clusterName = 1;
    string namespace   = 2;
    string message     = 3;
}

message Condition {
    string type = 1;
    string status = 2;
    string reason = 3;
    string message = 4;
    string timestamp = 5;
}
